--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@ header{
   /* margin-left: 80px; */
 }
 
+.loader {
+  height: 150px;
+  width: 150px;
+}
+
+
 .slider-viewport {
   position: relative;
   touch-action: pan-y;
@@ -43,11 +49,11 @@ header{
 }
 
 .prev {
-  left: 0;
+  left: 7px;
 }
 
 .next {
-  right: 0;
+  right: 7px;
 }
 
 .slider-list {
@@ -57,7 +63,7 @@ header{
   /* width: 70%; */
   /* gap: 40px; */
   align-items: center;
-  margin-left: 35px;
+  /* margin-left: 35px; */
 }
 
 .slider-list img {
@@ -91,6 +97,22 @@ article.is-next .slide {
   transform: scale(0.8);
   opacity: 0.7;
   z-index: 2;
+}
+
+article {
+  opacity: 0;
+  transform: translateY(20px);
+}
+
+article.is-visible {
+  animation: fadeUp 0.6s ease forwards;
+}
+
+@keyframes fadeUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .slider-list article h3 {
@@ -135,7 +157,7 @@ footer{
 
 @media (min-width: 768px) {
 
-  .slider-list{
+  .slider-list.is-loaded{
     margin-left: 200px;
   }
  }
